Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* Allow to rollback contract fee modifications
* Add Premium Preview state
* Module creation