@@ -7,6 +7,7 @@ def register():
     Pool.register(
         ContractFee,
         Premium,
+        PremiumTax,
         EndorsementContract,
         PreviewContractPremiums,
         ContractPreview,
